--- a/BouncingBallGame/game.html
+++ b/BouncingBallGame/game.html
@@ -21,10 +21,16 @@
     <h1>bouncing balls</h1>
     <p>Ball count: </p>
     <div id="timer">Time: 00:00:00</div>
+
+    <div id="start-container" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+      <button id="start-button" style="font-size: 1.5rem; padding: 10px 20px;">Start Game</button>
+    </div>
+
     <div id="win-message" style="display: none; color: white; font-size: 2rem; text-align: center; margin-top: 20px;">
         You Win!<br>
         <button id="play-again" style="margin-top: 10px; font-size: 1rem; padding: 5px 10px;">Play Again?</button>
-    </div>      
+    </div>
+
     <canvas></canvas>
     <p></p>
 
